--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1519,6 +1519,32 @@ input[type='checkbox']:checked {
     height: 100% !important;
 }
 
+.checkout-btn {
+    background-color: #007bff;
+    color: #fff;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 19px;
+}
+
+.checkout-btn:hover {
+    background-color: #0051a9;
+}
+
+.checkout-btn:focus {
+    outline: none!important;
+}
+
+.checkout-link, .checkout-link:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+
 /* ------------------------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------------------------------------------ */
