--- a/public/css/template_framework.css
+++ b/public/css/template_framework.css
@@ -69,6 +69,9 @@ label{margin-bottom:5px;}
 :required, :invalid{outline:none; box-shadow:none;}
 ::placeholder{opacity:1;}/* Makes sure the placeholder text is not transparent */
 
+#poll-instructor input {
+    display: inline-block;
+}
 
 /* Generalise
 --------------------------------------------------------------------------------------------------------------- */
